--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div>
+  <div id="container">
     <!-- Use the header area for the website name or logo -->
     <header>
       <a href="index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo"></a>
